--- a/bepchart/charts/telegraf-ds/templates/serviceaccount.yaml
+++ b/bepchart/charts/telegraf-ds/templates/serviceaccount.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "telegraf.serviceAccountName" . }}
+  name: {{ include "telegraf.serviceAccountName" . }}
   labels:
-    app: {{ template "telegraf.name" . }}
-    chart: {{ template "telegraf.chart" . }}
+    app: {{ include "telegraf.name" . }}
+    chart: {{ include "telegraf.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 {{- end }}
